# tool-attn

./: README.md  main.py  plan.md  pyproject.toml
results/phase1/: accuracy.json  correlations.csv  ranked_heads.csv  top_heads.txt
src/: __init__.py  ablation.py  analysis.py  attention.py  dataset.py  parsing.py  prompts.py  tokens.py  tools.py
